--- a/scripts/app/container/html_source/report/drugdrug.html
+++ b/scripts/app/container/html_source/report/drugdrug.html
@@ -143,7 +143,7 @@
                                         style="fill:#a8cbfe;stroke-width:0.0521347"/>
                             </g>
                         </svg>
-                        Report by Oncoreport
+                        Report created by Oncoreport
                     </small>
                 </div>
             </div>
