--- a/scripts/app/container/html_source/report/mutations.html
+++ b/scripts/app/container/html_source/report/mutations.html
@@ -115,6 +115,18 @@
                     %>
                 </div>
 
+                <div class="row">
+                    <div class="col-12">
+                        <small>
+                            * COSMIC clinical significance is predicted with the FATHMM-MKL algorithm.
+                            For more details see
+                            <a href="https://cancer.sanger.ac.uk/cosmic/analyses">
+                                https://cancer.sanger.ac.uk/cosmic/analyses
+                            </a>.
+                        </small>
+                    </div>
+                </div>
+
                 <div class="alert alert-warning d-flex align-items-center" role="alert">
                     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
                         <use xlink:href="#exclamation-triangle-fill"/>
@@ -143,7 +155,7 @@
                                         style="fill:#a8cbfe;stroke-width:0.0521347"/>
                             </g>
                         </svg>
-                        Report by Oncoreport
+                        Report created by Oncoreport
                     </small>
                 </div>
             </div>
