--- a/scripts/app/container/html_source/report/mutations.html
+++ b/scripts/app/container/html_source/report/mutations.html
@@ -115,20 +115,22 @@
                     %>
                 </div>
 
-                <div class="row">
-                    <div class="col-12">
-                        <small>
-                            * COSMIC clinical significance is predicted with the FATHMM-MKL algorithm.
-                            For more details see
-                            <a href="https://cancer.sanger.ac.uk/cosmic/analyses">
-                                https://cancer.sanger.ac.uk/cosmic/analyses
-                            </a>.
-                        </small>
+                <div class="alert alert-warning d-flex align-items-center mb-2" role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
+                        <use xlink:href="#exclamation-triangle-fill"/>
+                    </svg>
+                    <div>
+                        * COSMIC clinical significance is predicted with the FATHMM-MKL algorithm.
+                        For more details see
+                        <a href="https://cancer.sanger.ac.uk/cosmic/analyses">
+                            https://cancer.sanger.ac.uk/cosmic/analyses
+                        </a>.
                     </div>
                 </div>
 
+
                 <div class="alert alert-warning d-flex align-items-center" role="alert">
-                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:">
                         <use xlink:href="#exclamation-triangle-fill"/>
                     </svg>
                     <div>
