--- a/scripts/app/container/html_source/report/drugfood.html
+++ b/scripts/app/container/html_source/report/drugfood.html
@@ -21,6 +21,9 @@
             <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
             </symbol>
+            <symbol id="search-icon" fill="currentColor" viewBox="0 0 512 512">
+                <path d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"/>
+            </symbol>
         </svg>
 
         <header class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
@@ -109,7 +112,20 @@
 
                 <div class="pb-5">
                     <h1 class="mt-0">Drug-Food Interactions</h1>
-                    <div class="table-responsive">
+                    <div class="table-responsive" data-search-table-container>
+                        <div class="mb-2 d-flex flex-row-reverse justify-content-between align-items-center">
+                            <div class="position-relative">
+                                <span class="position-absolute" style="top: 0.50rem; left: 1rem;">
+                                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img"
+                                         aria-label="Search">
+                                        <use xlink:href="#search-icon"/>
+                                    </svg>
+                                </span>
+                                <input class="form-control w-100" style="padding-left: 2.75rem;"
+                                       placeholder="Enter a text to search the table..."
+                                       aria-label="Enter a text to search the table" data-search-input>
+                            </div>
+                        </div>
                         <%
                             if (!is.null(drug_food_interactions)) {
                                 cat(drug_food_interactions)
@@ -136,7 +152,8 @@
                 <div class="col-12">
                     <small class="d-block mb-3 text-muted">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                             stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-inline mb-2" role="img"
+                             stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-inline mb-2"
+                             role="img"
                              viewBox="0 0 24 24"><title>Product</title>
                             <g transform="translate(-82.78836,-130.00338)">
                                 <path
@@ -155,5 +172,6 @@
 
 
         <script src="assets/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/searchable.js"></script>
     </body>
 </html>
