--- a/scripts/app/container/html_source/report/cosmic.html
+++ b/scripts/app/container/html_source/report/cosmic.html
@@ -140,26 +140,30 @@
                                        aria-label="Enter a text to search the table" data-search-input>
                             </div>
                         </div>
-                        <div class="table-responsive" data-search-table-container>
-                            <%
-                            if (!is.null(cosmic$summary)) {
-                            cat(cosmic$summary)
-                            } else {
-                            cat("<h5>No data available.</h5>")
-                            }
-                            %>
+                        <div class="table-responsive-container">
+                            <div class="table-responsive" data-search-table-container>
+                                <%
+                                if (!is.null(cosmic$summary)) {
+                                cat(cosmic$summary)
+                                } else {
+                                cat("<h5>No data available.</h5>")
+                                }
+                                %>
+                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade p-3" id="clinical-evidence" role="tabpanel"
                          aria-labelledby="clinical-evidence-tab">
-                        <div class="table-responsive">
-                            <%
-                            if (!is.null(cosmic$details)) {
-                            cat(cosmic$details)
-                            } else {
-                            cat("<h5>No data available.</h5>")
-                            }
-                            %>
+                        <div class="table-responsive-container">
+                            <div class="table-responsive">
+                                <%
+                                if (!is.null(cosmic$details)) {
+                                cat(cosmic$details)
+                                } else {
+                                cat("<h5>No data available.</h5>")
+                                }
+                                %>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -213,5 +217,6 @@
             })();
         </script>
         <script src="assets/js/searchable.js"></script>
+        <script src="assets/js/scroll.js"></script>
     </body>
 </html>
