--- a/scripts/app/container/html_source/report/therapeutic.html
+++ b/scripts/app/container/html_source/report/therapeutic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="utf-8">
         <title>Oncoreport Clinical Mutation Report - Therapeutic Indications</title>
@@ -158,14 +158,16 @@
                                                        aria-label="Enter a text to search the table" data-search-input-clinical>
                                             </div>
                                         </div>
-                                        <div class="table-responsive" data-search-table-container-clinical>
-                                            <%
-                                                if (!is.null(therapeutic_indications$summary$clinical.impact)) {
-                                                    cat(therapeutic_indications$summary$clinical.impact)
-                                                } else {
-                                                    cat("<h5>No data available.</h5>")
-                                                }
-                                            %>
+                                        <div class="table-responsive-container">
+                                            <div class="table-responsive" data-search-table-container-clinical>
+                                                <%
+                                                    if (!is.null(therapeutic_indications$summary$clinical.impact)) {
+                                                        cat(therapeutic_indications$summary$clinical.impact)
+                                                    } else {
+                                                        cat("<h5>No data available.</h5>")
+                                                    }
+                                                %>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -192,14 +194,16 @@
                                                        aria-label="Enter a text to search the table" data-search-input-others>
                                             </div>
                                         </div>
-                                        <div class="table-responsive" data-search-table-container-others>
-                                            <%
-                                                if (!is.null(therapeutic_indications$summary$others)) {
-                                                    cat(therapeutic_indications$summary$others)
-                                                } else {
-                                                    cat("<h5>No data available.</h5>")
-                                                }
-                                            %>
+                                        <div class="table-responsive-container">
+                                            <div class="table-responsive" data-search-table-container-others>
+                                                <%
+                                                    if (!is.null(therapeutic_indications$summary$others)) {
+                                                        cat(therapeutic_indications$summary$others)
+                                                    } else {
+                                                        cat("<h5>No data available.</h5>")
+                                                    }
+                                                %>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -210,26 +214,30 @@
                     </div>
                     <div class="tab-pane fade p-3" id="clinical-evidence" role="tabpanel"
                          aria-labelledby="clinical-evidence-tab">
-                        <div class="table-responsive">
-                            <%
-                                if (!is.null(therapeutic_indications$evidences)) {
-                                    cat(therapeutic_indications$evidences)
-                                } else {
-                                    cat("<h5>No data available.</h5>")
-                                }
-                            %>
+                        <div class="table-responsive-container">
+                            <div class="table-responsive">
+                                <%
+                                    if (!is.null(therapeutic_indications$evidences)) {
+                                        cat(therapeutic_indications$evidences)
+                                    } else {
+                                        cat("<h5>No data available.</h5>")
+                                    }
+                                %>
+                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade p-3" id="variant-details" role="tabpanel"
                          aria-labelledby="variant-details-tab">
-                        <div class="table-responsive">
-                            <%
-                                if (!is.null(therapeutic_indications$details)) {
-                                    cat(therapeutic_indications$details)
-                                } else {
-                                    cat("<h5>No data available.</h5>")
-                                }
-                            %>
+                        <div class="table-responsive-container">
+                            <div class="table-responsive">
+                                <%
+                                    if (!is.null(therapeutic_indications$details)) {
+                                        cat(therapeutic_indications$details)
+                                    } else {
+                                        cat("<h5>No data available.</h5>")
+                                    }
+                                %>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -343,5 +351,6 @@
             })();
         </script>
         <script src="assets/js/searchable.js"></script>
+        <script src="assets/js/scroll.js"></script>
     </body>
 </html>
