--- a/scripts/app/container/html_source/report/cosmic.html
+++ b/scripts/app/container/html_source/report/cosmic.html
@@ -127,26 +127,13 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active p-3" id="variants-summary" role="tabpanel"
                          aria-labelledby="variants-summary-tab">
-                        <div class="mb-2 d-flex flex-row-reverse justify-content-between align-items-center">
-                            <div class="position-relative">
-                                <span class="position-absolute" style="top: 0.50rem; left: 1rem;">
-                                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img"
-                                         aria-label="Search">
-                                        <use xlink:href="#search-icon"/>
-                                    </svg>
-                                </span>
-                                <input class="form-control w-100" style="padding-left: 2.75rem;"
-                                       placeholder="Enter a text to search the table..."
-                                       aria-label="Enter a text to search the table" data-search-input>
-                            </div>
-                        </div>
                         <div class="table-responsive-container">
-                            <div class="table-responsive" data-search-table-container>
+                            <div class="table-responsive" data-searchable>
                                 <%
                                 if (!is.null(cosmic$summary)) {
-                                cat(cosmic$summary)
+                                    cat(cosmic$summary)
                                 } else {
-                                cat("<h5>No data available.</h5>")
+                                    cat("<h5>No data available.</h5>")
                                 }
                                 %>
                             </div>
@@ -158,9 +145,9 @@
                             <div class="table-responsive">
                                 <%
                                 if (!is.null(cosmic$details)) {
-                                cat(cosmic$details)
+                                    cat(cosmic$details)
                                 } else {
-                                cat("<h5>No data available.</h5>")
+                                    cat("<h5>No data available.</h5>")
                                 }
                                 %>
                             </div>
