--- a/scripts/app/container/html_source/report/offlabel.html
+++ b/scripts/app/container/html_source/report/offlabel.html
@@ -84,13 +84,12 @@
                                     </div>
                                     <div class="col-4 card-text">
                                         Age: <%=pt_age %><br>
-                                        City: <%=ifelse(is.null(pt_city), "Not Available", pt_city) %><br>
-                                        Phone: <%=ifelse(is.null(pt_phone), "Not Available", pt_phone) %><br>
+                                        Disease: <%=pt_disease_name %><br>
+                                        Stage: <%=ifelse(is.null(pt_tumor_stage), "Not Available", pt_tumor_stage) %>
                                     </div>
                                     <div class="col-4 card-text">
                                         Sample Name: <%=pt_sample_name %><br>
-                                        Disease: <%=pt_disease_name %><br>
-                                        Stage: <%=ifelse(is.null(pt_tumor_stage), "Not Available", pt_tumor_stage) %>
+                                        &nbsp;<br>&nbsp;
                                     </div>
                                 </div>
                             </div>
